# Medical-Image-Segmentation

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_JOB_MODEL_UPGRADE_PLAN.md  CHANGELOG.md  Dockerfile  MODEL_CARD.md  Makefile  README.md  STORY_PITCH.md  basic_pyton300.ipynb  config.yaml  docker-compose.yml  pyproject.toml  python_basic 300  requirements.txt  results.csv  run_api.sh  test_yolo.py
.github/workflows/: ci.yml
.sisyphus/evidence/: task-5-pytest-pass.txt
api/: app.py  constants.py  schemas.py  services.py  state.py
api/routers/: analyze.py  ask.py  monitoring.py  predict.py  vlm.py
compare_csc/: balance_recover_results.csv  baseresults.csv  results.csv
core/: config.py  structured_logging.py
db/: experiment_db.py
docker/: docker-compose.yml
docs/: CLINICAL_PROBLEM_MAP.md  DENTEX_ANALYSIS.md  RESUME_PROJECT_DESCRIPTION.md
preprocessing/: prepare_dataset.py  prepare_dataset_dentex.py
project practice/: .dockerignore  .gitignore  CAREER_PLAN.md  Dockerfile  JOB_PREP_PLAN.md  PROJECT_REVIEW.md  README.md  SETUP_MACBOOK.md  STORY_PITCH.md  VERIFY_CHECKLIST.md  WORKFLOW_REALTIME.md  requirements.txt
project practice/api/: app.py
project practice/db/: experiment_db.py
rag/: auto_ingest.py  chain.py  ingest.py
scripts/: export_onnx.py
tests/: test_api.py  test_auto_ingest.py  test_yolo.py
training/: log_experiment_results.py  train.py  train_colab.py  train_colab_dentex.py  train_colab_dentex_recall_boost.py  train_colab_dentex_v2_augmented.py
ui/: demo.html
vlm/: client.py
코드업 100제/: 기본 100제.ipynb  입출력 100제.ipynb
(+48 files in other folders)
